--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>ClinicaOnline</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://firebasestorage.googleapis.com/v0/b/trabajopracticofinallaboiv.appspot.com/o/users%2Fhistorial-medico.ico?alt=media&token=fc66d93e-5c42-474b-ab2f-64a0f701b3d9">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
